# project-result

./: .gitignore  Dockerfile  pyproject.toml
app/: main.py
app/api/: __init__.py
app/api/routes/: auth.py  users.py
app/application/dto/: user_dto.py
app/application/use_cases/: auth_use_cases.py  interactor.py  user_use_cases.py
app/domain/adapters/: jwt_token_adapter.py  password_hash_adapter.py
app/domain/entities/: base.py  user.py
app/domain/repositories/: user_repository.py
app/infrastructure/: config.py
app/infrastructure/adapters/: jwt_token_adapter.py  password_hash_adapter.py
app/infrastructure/database/models/: base.py  user.py
app/infrastructure/di/: container.py
app/infrastructure/di/providers/: adapters.py  database.py  repositories.py
app/infrastructure/di/providers/use_cases/: auth.py  user.py
app/infrastructure/repositories/: user_repository_impl.py
migrations/: env.py
migrations/versions/: 25e7705d4353_initial_migration.py
